# manifold-destiny

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/clevr_smoke_slice/: intake_smoke_slice.json
examples/crossed_fixtures/: crossed_fixture_suite.json
examples/lean_adapter/: lean-verdict-table.json
paper/: main.typ  refs.bib
reproduce/: ENVIRONMENT.md  README.md  RECEIPT_SCHEMA.md  all.sh
reproduce/01_synthetic_gf2/: README.md  run.sh
reproduce/02_quantum/: README.md  quantum-data-with-metadata.json  quantum-expanded-data.json  run.sh
reproduce/03_lean_generation/: README.md  run.sh
reproduce/04_real_corpus_replay/: README.md  fetch_data.sh  run.sh
reproduce/05_manifold_store/: README.md  run.sh
reproduce/06_self_extending_grammar/: README.md  run.sh
reproduce/_lib/: gate_lib.sh  receipt_tools.py
scripts/: generate_paper_figures.py
src/manifold_destiny/: __init__.py  iteration8_episode.py  iteration9_bounded_generation_receipts.py  iteration9_bounded_grammar.py  iteration9_gluing_bounded_generation.py  iteration9_gluing_episode.py  iteration9_gluing_verifier.py  iteration9_lean_bounded_generation.py  iteration9_lean_github_replay.py  iteration9_manifold_store.py  iteration9_quantum_episode.py  iteration9_quantum_oracle_bounded_generation.py  iteration9_quantum_oracle_episode.py  iteration9_quantum_oracle_evaluation.py  iteration9_quantum_oracle_policy.py  iteration9_quantum_oracle_reductions.py  iteration9_quantum_oracle_verifier.py
tests/: test_iteration9_bounded_generation_gf2.py  test_iteration9_bounded_generation_lean.py  test_iteration9_bounded_generation_phase_a.py  test_iteration9_bounded_generation_quantum.py  test_iteration9_lean_github_replay.py  test_iteration9_lean_self_extending.py  test_iteration9_manifold_store.py  test_iteration9_self_extending_grammar.py
(+7 files in other folders)
